--- a/frontend/src/styles/components/RoadmapCard.css
+++ b/frontend/src/styles/components/RoadmapCard.css
@@ -2,10 +2,10 @@
 
 .roadmap-card {
     @apply relative items-center justify-between gap-3
-           px-6 py-4 rounded-2xl bg-linear-to-r from-blue-400 to-blue-500
-           shadow-md text-white font-medium
+           px-6 py-4 rounded-2xl bg-linear-to-r from-red-400 to-red-500
+           shadow-md text-(--palette_White) font-medium
            transition-all duration-300 ease-out
-           hover:from-blue-500 hover:to-blue-600 hover:shadow-lg
+           hover:from-red-500 hover:to-red-600 hover:shadow-lg
            select-none text-center hover:scale-103 active:scale-97 active:shadow-inner;
     /* width: fit-content; */
     width: 20vw;
@@ -17,5 +17,5 @@
 }
 
 .roadmap-card:focus-visible {
-    @apply outline-none ring-2 ring-blue-300;
+    @apply outline-none ring-2 ring-red-300;
 }
